--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -1,3 +1,21 @@
-<p>
-  contact-form works!
-</p>
+
+
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="mx-auto py-5">
+    <div class="form-group">
+        <input placeholder="Enter Name" type="text" id="name" name="name" formControlName="name" class="form-control">
+        <span *ngIf="!contactForm.get('name').valid && contactForm.get('name').touched">Please enter a name</span>
+    </div>
+
+    <div class="form-group">
+      <input placeholder="Enter email" type="email" id="email" name="_replyto" formControlName="email" class="form-control">
+      <span *ngIf="!contactForm.get('email').valid && contactForm.get('email').touched">Please enter a valid email address</span>
+    </div>
+
+    <div class="form-group">
+        <textarea name="message" rows="5" class="form-control" placeholder="message...."></textarea>
+    </div>
+
+    <div align="center">
+    <input type="submit" name="submit" class="btn btn-default" value="Send message"/>
+ </div>
+</form>
