--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,12 +1,44 @@
+<div class="container-fluid wrapper">
+
+<div class="container-fluid hero-image">
+
+</div>
+
 <section class="contact-header">
-  <h3>Anmax Web Design is a full service web development agency based in Cas Grandi, Curacao.</h3>
+  <h3>Contact</h3>
+  <hr color="accent">
 
 </section>
 <section class="contact-map">
-  Map section, map to follow
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.2358874469055!2d-68.85431208561549!3d12.09599739143455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e837c567f26e1d5%3A0xe12645bf7ede028a!2sKaya+Vivaldi%2C+Willemstad%2C+Cura%C3%A7ao!5e0!3m2!1sen!2s!4v1527541506810" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </section>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 pt-4">
+    <h3>Inquiries</h3>
+    <p>For any inquiries, questions or commendations, please call: 5123300 or fill out the following form</p>
+<app-contact-form></app-contact-form>
+
+  </div>
+  <div class="col-md-6 address pt-4">
+      <h3>Address</h3>
+      <address>
+      Kaya Vivaldi 28, Cas Grandi<br>
+      Curacao<br>
+      Phone: +599 9 5123300<br>
+      Email: bob@anmaxwebdesign.com
+    </address>
+    <br>
+    <br>
+    <h3>Thanks for visiting us</h3>
+    <button mat-button color="accent">Accent</button>
+  </div>
+  </div>
+</div>
+
+
 <div class="container-fluid">
 
-    <app-contact-form></app-contact-form>
 
+</div>
 </div>
