--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -16,6 +16,8 @@
     </div>
 
     <div align="center">
-    <input type="submit" name="submit" class="btn btn-default" value="Send message"/>
+   <!-- <input type="submit" name="submit" class="btn btn-default" value="Send message"/> -->
+    <button mat-raised-button color="accent"
+    type="submit" name="submit" value="Send message" ><i class="far fa-envelope"></i>Submit</button>
  </div>
 </form>
