--- a/src/app/contact-page/contact-page.component.html
+++ b/src/app/contact-page/contact-page.component.html
@@ -1,18 +1,18 @@
-<div class="container-fluid wrapper">
+
 
 <div class="container-fluid hero-image">
 
 </div>
-
+<div class="container-fluid wrapper">
 <section class="contact-header">
+
   <h3>Contact</h3>
-  <hr color="accent">
 
 </section>
 <section class="contact-map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.2358874469055!2d-68.85431208561549!3d12.09599739143455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e837c567f26e1d5%3A0xe12645bf7ede028a!2sKaya+Vivaldi%2C+Willemstad%2C+Cura%C3%A7ao!5e0!3m2!1sen!2s!4v1527541506810" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 </section>
-<div class="container">
+<div class="container form-section">
   <div class="row">
     <div class="col-md-6 pt-4">
     <h3>Inquiries</h3>
@@ -20,7 +20,7 @@
 <app-contact-form></app-contact-form>
 
   </div>
-  <div class="col-md-6 address pt-4">
+  <div class="col-md-6 address pt-4 address section">
       <h3>Address</h3>
       <address>
       Kaya Vivaldi 28, Cas Grandi<br>
@@ -31,7 +31,7 @@
     <br>
     <br>
     <h3>Thanks for visiting us</h3>
-    <button mat-button color="accent">Accent</button>
+
   </div>
   </div>
 </div>
