--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -53,4 +53,18 @@
       </div>
     </div>
   </section>
+  <!-- subscription section -->
+
+<div class="container-fluid subscription-section">
+    <div class="row">
+      <div class="col-md-4 pt-3">
+        <p>Stay informed about the latest news and offers? <br>Subscribe to our Newsletter</p>
+      </div>
+      <div class="col-md-8 pt-4">
+        <app-subscription-form></app-subscription-form>
+
+
+      </div>
+    </div>
+    </div>
 
