--- a/src/app/subscription-form/subscription-form.component.html
+++ b/src/app/subscription-form/subscription-form.component.html
@@ -12,7 +12,8 @@
       <span *ngIf="!subscribeForm.get('email').valid && subscribeForm.get('email').touched">Please enter a valid email address</span>
     </div>
     <input type="hidden" name="_subject" value="New subscribtion for AWD Newsletter!" />
-    <input type="submit" value="Subscribe" mat-raised-button color="accent">
+    <button mat-raised-button color="accent"
+    type="submit" name="submit" value="Send message" ><i class="far fa-envelope"></i>Subscribe</button>
     <div>
    <!--   <button type="submit" value="Subscribe" mat-raised-button color="accent">
         <i class="far fa-envelope"> Subscribe</i>
